--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/chatapp?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+api.prefix=/api/v1
