--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -57,7 +57,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/enviroments.ts",
+                  "with": "src/environments/enviroments.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
